✨ introduced season entity, writing NFO files and more
fixes #1697