@@ -16,73 +16,105 @@
 package org.tinymediamanager.core.tvshow.entities;
 
 import static org.tinymediamanager.core.Constants.ADDED_EPISODE;
-import static org.tinymediamanager.core.Constants.BANNER;
-import static org.tinymediamanager.core.Constants.BANNER_URL;
-import static org.tinymediamanager.core.Constants.FANART;
-import static org.tinymediamanager.core.Constants.FANART_URL;
 import static org.tinymediamanager.core.Constants.FIRST_AIRED;
+import static org.tinymediamanager.core.Constants.HAS_NFO_FILE;
 import static org.tinymediamanager.core.Constants.MEDIA_FILES;
-import static org.tinymediamanager.core.Constants.POSTER;
-import static org.tinymediamanager.core.Constants.POSTER_URL;
 import static org.tinymediamanager.core.Constants.REMOVED_EPISODE;
 import static org.tinymediamanager.core.Constants.SEASON;
-import static org.tinymediamanager.core.Constants.THUMB;
-import static org.tinymediamanager.core.Constants.THUMB_URL;
+import static org.tinymediamanager.core.Constants.TV_SHOW;
 
-import java.awt.Dimension;
 import java.beans.PropertyChangeListener;
 import java.util.ArrayList;
+import java.util.Comparator;
 import java.util.Date;
 import java.util.LinkedHashSet;
 import java.util.List;
+import java.util.Objects;
 import java.util.Set;
+import java.util.UUID;
 import java.util.concurrent.CopyOnWriteArrayList;
-import java.util.stream.Collectors;
 
-import org.tinymediamanager.core.AbstractModelObject;
+import org.jetbrains.annotations.NotNull;
 import org.tinymediamanager.core.MediaFileType;
+import org.tinymediamanager.core.entities.MediaEntity;
 import org.tinymediamanager.core.entities.MediaFile;
+import org.tinymediamanager.core.entities.MediaRating;
 import org.tinymediamanager.core.tvshow.TvShowList;
 import org.tinymediamanager.core.tvshow.TvShowModuleManager;
 import org.tinymediamanager.core.tvshow.TvShowScraperMetadataConfig;
+import org.tinymediamanager.core.tvshow.connector.ITvShowSeasonConnector;
+import org.tinymediamanager.core.tvshow.connector.TvShowSeasonToEmbyConnector;
+import org.tinymediamanager.core.tvshow.filenaming.TvShowSeasonNfoNaming;
+import org.tinymediamanager.scraper.MediaMetadata;
 import org.tinymediamanager.scraper.entities.MediaArtwork.MediaArtworkType;
+
+import com.fasterxml.jackson.annotation.JsonProperty;
 
 /**
  * The Class TvShowSeason.
  * 
  * @author Manuel Laggner
  */
-public class TvShowSeason extends AbstractModelObject implements Comparable<TvShowSeason> {
+public class TvShowSeason extends MediaEntity implements Comparable<TvShowSeason> {
 
-  private final TvShow                 tvShow;
-  private final List<TvShowEpisode>    episodes    = new CopyOnWriteArrayList<>();
-  private final PropertyChangeListener listener;
-  private final int                    season;
+  @JsonProperty
+  private UUID                      tvShowDbId = null;
 
-  private String                       title       = "";
-  private Date                         lastWatched = null;
+  @JsonProperty
+  private final int                 season;
 
-  public TvShowSeason(int season, TvShow tvShow) {
+  private TvShow                    tvShow     = null;
+  private final List<TvShowEpisode> episodes   = new CopyOnWriteArrayList<>();
+
+  private PropertyChangeListener    listener;
+
+  /**
+   * Instantiates a new tv show episode. To initialize the propertychangesupport after loading
+   */
+  public TvShowSeason(@JsonProperty("season") int season) {
+    // register for dirty flag listener
+    super();
+
     this.season = season;
+
+    init();
+  }
+
+  public TvShowSeason(int season, @NotNull TvShow tvShow) {
+    this(season);
+
     this.tvShow = tvShow;
+    this.tvShowDbId = tvShow.getDbId();
+  }
+
+  /**
+   * copy constructor
+   * 
+   * @param source
+   *          the other {@link TvShowSeason} to copy
+   */
+  public TvShowSeason(TvShowSeason source) {
+    super.merge(source);
+
+    this.tvShow = source.tvShow;
+    this.tvShowDbId = source.tvShowDbId;
+
+    this.season = source.season;
+
+    init();
+  }
+
+  private void init() {
     listener = evt -> {
-      if (evt.getSource() instanceof TvShowEpisode) {
-        TvShowEpisode episode = (TvShowEpisode) evt.getSource();
-
+      if (evt.getSource()instanceof TvShowEpisode episode) {
         switch (evt.getPropertyName()) {
-          case MEDIA_FILES:
-            firePropertyChange(MEDIA_FILES, null, evt.getNewValue());
-            break;
-
-          case SEASON:
+          case MEDIA_FILES -> firePropertyChange(MEDIA_FILES, null, evt.getNewValue());
+          case SEASON -> {
             if (episode.getSeason() != season) {
               removeEpisode(episode);
             }
-            break;
-
-          case FIRST_AIRED:
-            firePropertyChange(FIRST_AIRED, null, evt.getNewValue());
-            break;
+          }
+          case FIRST_AIRED -> firePropertyChange(FIRST_AIRED, null, evt.getNewValue());
         }
       }
     };
@@ -92,30 +124,39 @@ public class TvShowSeason extends AbstractModelObject implements Comparable<TvSh
     return season;
   }
 
+  @Override
+  public MediaFile getMainFile() {
+    return MediaFile.EMPTY_MEDIAFILE;
+  }
+
   /**
    * checks whether the parent {@link TvShow} is locked
    * 
    * @return true/false
    */
+  @Override
   public boolean isLocked() {
     return getTvShow() == null || getTvShow().isLocked();
   }
 
-  public void setTitle(String newValue) {
-    String oldValue = this.title;
-    this.title = newValue;
-    firePropertyChange("title", oldValue, newValue);
-
-    // store the title inside the TV show itself
-    getTvShow().addSeasonTitle(season, newValue);
+  @Override
+  public MediaRating getRating() {
+    return MediaMetadata.EMPTY_RATING;
   }
 
-  public String getTitle() {
-    return this.title;
+  public void setTvShow(TvShow newValue) {
+    TvShow oldValue = this.tvShow;
+    this.tvShow = newValue;
+    this.tvShowDbId = newValue.getDbId();
+    firePropertyChange(TV_SHOW, oldValue, newValue);
   }
 
   public TvShow getTvShow() {
     return tvShow;
+  }
+
+  public UUID getTvShowDbId() {
+    return tvShowDbId;
   }
 
   public synchronized void addEpisode(TvShowEpisode episode) {
@@ -153,13 +194,7 @@ public class TvShowSeason extends AbstractModelObject implements Comparable<TvSh
   }
 
   public List<TvShowEpisode> getEpisodes() {
-    List<TvShowEpisode> episodes = new ArrayList<>();
-    for (TvShowEpisode episode : this.episodes) {
-      if (!episode.isDummy()) {
-        episodes.add(episode);
-      }
-    }
-    return episodes;
+    return this.episodes.stream().filter(episode -> !episode.isDummy()).toList();
   }
 
   /**
@@ -168,11 +203,18 @@ public class TvShowSeason extends AbstractModelObject implements Comparable<TvSh
    * @return the first aired date of the first episode or null
    */
   public Date getFirstAired() {
-    if (episodes.isEmpty()) {
-      return null;
+    Date firstAired = null;
+
+    for (TvShowEpisode episode : episodes) {
+      if (firstAired == null) {
+        firstAired = episode.getFirstAired();
+      }
+      else if (episode.getFirstAired() != null && firstAired.after(episode.getFirstAired())) {
+        firstAired = episode.getFirstAired();
+      }
     }
 
-    return episodes.get(0).getFirstAired();
+    return firstAired;
   }
 
   /**
@@ -272,6 +314,7 @@ public class TvShowSeason extends AbstractModelObject implements Comparable<TvSh
     return filesize;
   }
 
+  @Override
   public long getTotalFilesize() {
     long filesize = 0;
     for (TvShowEpisode episode : episodes) {
@@ -280,159 +323,28 @@ public class TvShowSeason extends AbstractModelObject implements Comparable<TvSh
     return filesize;
   }
 
-  public void setArtwork(MediaFile mediaFile) {
-    MediaArtworkType artworkType = MediaFileType.getMediaArtworkType(mediaFile.getType());
-    String oldValue = getArtworkFilename(artworkType);
-    String newValue = mediaFile.getFile().toString();
-
-    tvShow.setSeasonArtwork(season, mediaFile);
-
-    switch (artworkType) {
-      case SEASON_POSTER:
-        firePropertyChange(POSTER, oldValue, newValue);
-        break;
-
-      case SEASON_FANART:
-        firePropertyChange(FANART, oldValue, newValue);
-        break;
-
-      case SEASON_BANNER:
-        firePropertyChange(BANNER, oldValue, newValue);
-        break;
-
-      case SEASON_THUMB:
-        firePropertyChange(THUMB, oldValue, newValue);
-        break;
-
-      default:
-        return;
-    }
-
-    for (TvShowEpisode episode : episodes) {
-      episode.setSeasonArtworkChanged(artworkType);
-    }
-  }
-
-  public void clearArtwork(MediaArtworkType artworkType) {
-    tvShow.clearSeasonArtwork(season, artworkType);
-
-    switch (artworkType) {
-      case SEASON_POSTER:
-        firePropertyChange(POSTER, null, "");
-        break;
-
-      case SEASON_FANART:
-        firePropertyChange(FANART, null, "");
-        break;
-
-      case SEASON_BANNER:
-        firePropertyChange(BANNER, null, "");
-        break;
-
-      case SEASON_THUMB:
-        firePropertyChange(THUMB, null, "");
-        break;
-    }
-  }
-
-  public String getArtworkFilename(MediaArtworkType type) {
-    return tvShow.getSeasonArtwork(season, type);
-  }
-
-  public Dimension getArtworkSize(MediaArtworkType type) {
-    return tvShow.getSeasonArtworkSize(season, type);
-  }
-
-  /**
-   * <b>PHYSICALLY</b> deletes all {@link MediaFile}s of the given type
-   *
-   * @param type
-   *          the {@link MediaArtworkType} for all {@link MediaFile}s to delete
-   */
-  public void deleteArtworkFiles(MediaArtworkType type) {
-    tvShow.deleteSeasonArtworkFiles(season, type);
-
-    switch (type) {
-      case SEASON_POSTER:
-        firePropertyChange(POSTER, null, "");
-        break;
-
-      case SEASON_FANART:
-        firePropertyChange(FANART, null, "");
-        break;
-
-      case SEASON_BANNER:
-        firePropertyChange(BANNER, null, "");
-        break;
-
-      case SEASON_THUMB:
-        firePropertyChange(THUMB, null, "");
-        break;
-    }
-  }
-
-  public void setArtworkUrl(String newValue, MediaArtworkType artworkType) {
-    String oldValue = getArtworkUrl(artworkType);
-    tvShow.setSeasonArtworkUrl(season, newValue, artworkType);
-
-    switch (artworkType) {
-      case SEASON_POSTER:
-        firePropertyChange(POSTER_URL, oldValue, newValue);
-        break;
-
-      case SEASON_FANART:
-        firePropertyChange(FANART_URL, oldValue, newValue);
-        break;
-
-      case SEASON_BANNER:
-        firePropertyChange(BANNER_URL, oldValue, newValue);
-        break;
-
-      case SEASON_THUMB:
-        firePropertyChange(THUMB_URL, oldValue, newValue);
-        break;
-
-      default:
-        return;
-    }
-
-    for (TvShowEpisode episode : episodes) {
-      episode.setSeasonArtworkChanged(artworkType);
-    }
-  }
-
-  public void removeArtworkUrl(MediaArtworkType artworkType) {
-    tvShow.clearSeasonArtworkUrl(season, artworkType);
-  }
-
-  public String getArtworkUrl(MediaArtworkType type) {
-    return tvShow.getSeasonArtworkUrl(season, type);
-  }
-
-  public void downloadArtwork(MediaArtworkType artworkType) {
-    tvShow.downloadSeasonArtwork(season, artworkType);
-  }
-
+  @Override
   public List<MediaFile> getMediaFiles() {
-    ArrayList<MediaFile> mfs = new ArrayList<>();
-    Set<MediaFile> unique = new LinkedHashSet<>(mfs);
+    Set<MediaFile> unique = new LinkedHashSet<>(super.getMediaFiles());
+
     for (TvShowEpisode episode : episodes) {
       unique.addAll(episode.getMediaFiles());
     }
-    mfs.addAll(unique);
-    return mfs;
+
+    return new ArrayList<>(unique);
   }
 
   public List<MediaFile> getMediaFiles(MediaFileType type) {
-    ArrayList<MediaFile> mfs = new ArrayList<>();
-    Set<MediaFile> unique = new LinkedHashSet<>(mfs);
+    Set<MediaFile> unique = new LinkedHashSet<>(super.getMediaFiles(type));
+
     for (TvShowEpisode episode : episodes) {
       unique.addAll(episode.getMediaFiles(type));
     }
-    mfs.addAll(unique);
-    return mfs;
+
+    return new ArrayList<>(unique);
   }
 
+  @Override
   public boolean isNewlyAdded() {
     for (TvShowEpisode episode : episodes) {
       if (episode.isNewlyAdded()) {
@@ -442,44 +354,60 @@ public class TvShowSeason extends AbstractModelObject implements Comparable<TvSh
     return false;
   }
 
+  @Override
+  public void saveToDb() {
+    TvShowModuleManager.getInstance().getTvShowList().persistSeason(this);
+  }
+
+  public void writeNfo() {
+    ITvShowSeasonConnector connector;
+
+    // only write the NFO if there is at least one episode existing (or the setting activated)
+    if (!episodes.isEmpty() || TvShowModuleManager.getInstance().getSettings().isCreateMissingSeasonItems()) {
+      List<TvShowSeasonNfoNaming> nfoNamings = TvShowModuleManager.getInstance().getSettings().getSeasonNfoFilenames();
+      if (!nfoNamings.isEmpty()) {
+        connector = switch (TvShowModuleManager.getInstance().getSettings().getTvShowConnector()) {
+          default -> new TvShowSeasonToEmbyConnector(this);
+        };
+
+        connector.write(nfoNamings);
+
+        firePropertyChange(HAS_NFO_FILE, false, true);
+      }
+    }
+  }
+
+  @Override
+  public void callbackForWrittenArtwork(MediaArtworkType type) {
+    // nothing to do
+  }
+
+  @Override
+  protected Comparator<MediaFile> getMediaFileComparator() {
+    return null;
+  }
+
   /**
    * Gets the images to cache.
    *
    * @return the images to cache
    */
+  @Override
   public List<MediaFile> getImagesToCache() {
     // get files to cache
-    return getMediaFiles().stream().filter(MediaFile::isGraphic).collect(Collectors.toList());
-  }
-
-  public Date getLastWatched() {
-    return lastWatched;
-  }
-
-  public void setLastWatched(Date lastWatched) {
-    this.lastWatched = lastWatched;
+    return getMediaFiles().stream().filter(MediaFile::isGraphic).toList();
   }
 
   public Object getValueForMetadata(TvShowScraperMetadataConfig metadataConfig) {
+    return switch (metadataConfig) {
+      case TITLE -> getTitle();
+      case SEASON_POSTER -> getArtworkFilename(MediaFileType.SEASON_POSTER);
+      case SEASON_FANART -> getArtworkFilename(MediaFileType.SEASON_FANART);
+      case SEASON_BANNER -> getArtworkFilename(MediaFileType.SEASON_BANNER);
+      case SEASON_THUMB -> getArtworkFilename(MediaFileType.SEASON_THUMB);
+      default -> null;
+    };
 
-    switch (metadataConfig) {
-      case TITLE:
-        return getTitle();
-
-      case SEASON_POSTER:
-        return getArtworkFilename(MediaArtworkType.SEASON_POSTER);
-
-      case SEASON_FANART:
-        return getArtworkFilename(MediaArtworkType.SEASON_FANART);
-
-      case SEASON_BANNER:
-        return getArtworkFilename(MediaArtworkType.SEASON_BANNER);
-
-      case SEASON_THUMB:
-        return getArtworkFilename(MediaArtworkType.SEASON_THUMB);
-    }
-
-    return null;
   }
 
   @Override
@@ -488,5 +416,24 @@ public class TvShowSeason extends AbstractModelObject implements Comparable<TvSh
       return getTvShow().getTitle().compareTo(o.getTvShow().getTitle());
     }
     return Integer.compare(getSeason(), o.getSeason());
+  }
+
+  @Override
+  public boolean equals(Object o) {
+    if (this == o) {
+      return true;
+    }
+
+    if (o == null || getClass() != o.getClass()) {
+      return false;
+    }
+
+    TvShowSeason that = (TvShowSeason) o;
+    return season == that.season && Objects.equals(tvShow, that.tvShow);
+  }
+
+  @Override
+  public int hashCode() {
+    return Objects.hash(tvShow, season);
   }
 }
